--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -18,7 +18,7 @@
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
-  margin-right: 93px;
+  margin-bottom: 20px;
   display: block;
   
   color: #FFFFFF;
@@ -78,7 +78,6 @@
 
 
 .footer-social__title {
-  display: flex;
   color: #F5F5F5;
 }
 
