--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,6 +3,7 @@
   padding-bottom: 200px;
   max-width: 1600px;
   margin: 0 auto;
+  text-align: center;
 
 
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/img-hero.png");
@@ -33,8 +34,5 @@
 // HERO BTN
 
 .hero__btn.btn {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
   margin-top: 30px;
 }
