--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,18 +6,18 @@
 @import "./base/section";
 @import "./base/container";
 
-@import "./components/section-title";
-@import "./components/logo";
-@import "./components/bootton";
+@import "./components/advantages";
 @import "./components/backdrop";
-@import "./components/modal-window";
+@import "./components/curstomers";
+@import "./components/hero";
 @import "./components/modal-content";
+@import "./components/modal-window";
+@import "./components/portfolio";
+@import "./components/team";
+@import "./components/work";
 
-@import "./layout/header";
-@import "./layout/hero";
-@import "./layout/advantages";
-@import "./layout/work";
-@import "./layout/team";
-@import "./layout/curstomers";
-@import "./layout/portfolio";
+@import "./layout/bootton";
 @import "./layout/footer";
+@import "./layout/header";
+@import "./layout/logo";
+@import "./layout/section-title";
